style: fix layout issues

--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -10,7 +10,6 @@
   font-family: v.$secondary-font;
   background-color: var(--bg-color);
   color: var(--font-color);
-  gap: 24px;
 }
 
 .lp-header {
